// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function excludeFirstFiveResults([first, second, third, fourth, fifth, ...rest]) {
  return rest;
}

function excludeFirstFiveResults2([first, second, third, fourth, fifth, ...rest] = DEFAULT_FIVE_RESULTS) {
  return rest;
}

function excludeFirstFiveResults3([firstResult, secondResult, thirdResult, fourthResult, fifthResult, ...rest] = [1, 2, 3, 4, 5]) {
  return rest;
}

const excludeFirstFiveResults5 = ([first, second, third, fourth, fifth, ...rest]) => {
  return rest;
}

class A {
  excludeFirstFiveResults([first, second, third, fourth, fifth, ...restOfResults]) {
    return restOfResults;
  }
}

promise.then(([firstResult, secondResult, thirdResult, fourthResult, fifthResult, ...rest]) => {
  return rest;
});

=====================================output=====================================
function excludeFirstFiveResults([
  first,
  second,
  third,
  fourth,
  fifth,
  ...rest
]) {
  return rest;
}

function excludeFirstFiveResults2([
  first,
  second,
  third,
  fourth,
  fifth,
  ...rest
] = DEFAULT_FIVE_RESULTS) {
  return rest;
}

function excludeFirstFiveResults3(
  [
    firstResult,
    secondResult,
    thirdResult,
    fourthResult,
    fifthResult,
    ...rest
  ] = [1, 2, 3, 4, 5],
) {
  return rest;
}

const excludeFirstFiveResults5 = ([
  first,
  second,
  third,
  fourth,
  fifth,
  ...rest
]) => {
  return rest;
};

class A {
  excludeFirstFiveResults([
    first,
    second,
    third,
    fourth,
    fifth,
    ...restOfResults
  ]) {
    return restOfResults;
  }
}

promise.then(
  ([
    firstResult,
    secondResult,
    thirdResult,
    fourthResult,
    fifthResult,
    ...rest
  ]) => {
    return rest;
  },
);

================================================================================
`;

exports[`object.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function StatelessFunctionalComponent({
  isActive,
  onFiltersUpdated,
  onSelect,
  onSubmitAndDeselect,
  onCancel,
  searchFilters,
  title,
  items,
}) {
  return <div />
}

function StatelessFunctionalComponent2({
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = '',
  items = [],
} = {}) {
  return <div />
}

function StatelessFunctionalComponent3(
  {
    isActive,
    onFiltersUpdated = () => null,
    onSelect = () => null,
    onSubmitAndDeselect = () => null,
    onCancel = () => null,
    searchFilters = null,
    title = '',
    items = [],
  } = {
    isActive: true
  }
) {
  return <div />
}


class C {
  StatelessFunctionalComponent({
    isActive,
    onFiltersUpdated,
    onSelect,
    onSubmitAndDeselect,
    onCancel,
    searchFilters,
    title,
    items,
  }) {
    return <div />
  }
}

=====================================output=====================================
function StatelessFunctionalComponent({
  isActive,
  onFiltersUpdated,
  onSelect,
  onSubmitAndDeselect,
  onCancel,
  searchFilters,
  title,
  items,
}) {
  return <div />;
}

function StatelessFunctionalComponent2({
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = "",
  items = [],
} = {}) {
  return <div />;
}

function StatelessFunctionalComponent3(
  {
    isActive,
    onFiltersUpdated = () => null,
    onSelect = () => null,
    onSubmitAndDeselect = () => null,
    onCancel = () => null,
    searchFilters = null,
    title = "",
    items = [],
  } = {
    isActive: true,
  },
) {
  return <div />;
}

class C {
  StatelessFunctionalComponent({
    isActive,
    onFiltersUpdated,
    onSelect,
    onSubmitAndDeselect,
    onCancel,
    searchFilters,
    title,
    items,
  }) {
    return <div />;
  }
}

================================================================================
`;

exports[`tuple-and-record.js [acorn] format 1`] = `
"Unexpected character '{' (22:6)
  20 |   title = '',
  21 |   items = [],
> 22 | } = #{}) {
     |      ^
  23 | }
  24 |
  25 | function StatelessFunctionalComponent3([
Cause: Unexpected character '{' (22:5)"
`;

exports[`tuple-and-record.js [espree] format 1`] = `
"Unexpected character '{' (22:6)
  20 |   title = '',
  21 |   items = [],
> 22 | } = #{}) {
     |      ^
  23 | }
  24 |
  25 | function StatelessFunctionalComponent3([
Cause: Unexpected character '{'"
`;

exports[`tuple-and-record.js [flow] format 1`] = `
"Unexpected token \`#\`, expected an identifier (22:5)
  20 |   title = '',
  21 |   items = [],
> 22 | } = #{}) {
     |     ^
  23 | }
  24 |
  25 | function StatelessFunctionalComponent3(["
`;

exports[`tuple-and-record.js [meriyah] format 1`] = `
"'#' not followed by identifier (22:5)
  20 |   title = '',
  21 |   items = [],
> 22 | } = #{}) {
     |     ^
  23 | }
  24 |
  25 | function StatelessFunctionalComponent3([
Cause: [22:5]: '#' not followed by identifier"
`;

exports[`tuple-and-record.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function StatelessFunctionalComponent1({
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = '',
  items = [],
} = {}) {
}

function StatelessFunctionalComponent2({
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = '',
  items = [],
} = #{}) {
}

function StatelessFunctionalComponent3([
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = '',
  items = [],
] = []) {
}

function StatelessFunctionalComponent4([
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = '',
  items = [],
] = #[]) {
}

=====================================output=====================================
function StatelessFunctionalComponent1({
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = "",
  items = [],
} = {}) {}

function StatelessFunctionalComponent2({
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = "",
  items = [],
} = #{}) {}

function StatelessFunctionalComponent3([
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = "",
  items = [],
] = []) {}

function StatelessFunctionalComponent4([
  isActive = true,
  onFiltersUpdated = () => null,
  onSelect = () => null,
  onSubmitAndDeselect = () => null,
  onCancel = () => null,
  searchFilters = null,
  title = "",
  items = [],
] = #[]) {}

================================================================================
`;
